fix: remove default body margin to prevent unnecessary scrollbars, fixed #13

--- a/assets/tufted.css
+++ b/assets/tufted.css
@@ -20,6 +20,7 @@ html {
 
 /* Sticky footer layout */
 body {
+    margin: 0;
     min-height: 100%;
     display: flex;
     flex-direction: column;
